--- a/Enabling_14a_html/styles/enabling_14a_dlilearn.css
+++ b/Enabling_14a_html/styles/enabling_14a_dlilearn.css
@@ -133,6 +133,7 @@ html body {
 	background-image: -moz-linear-gradient(top, #797979, #565656);
 	background-image: -ms-linear-gradient(top, #797979, #565656);
 	background-image: -o-linear-gradient(top, #797979, #565656);
+	background-image: url("../assets/btn_phone_bg_bar_off.png"); /* IE 9 */	
 	-webkit-user-select: none; /* Chrome all / Safari all */
 	-moz-user-select: none; /* Firefox all */
 	-ms-user-select: none; /* IE 10+ */
@@ -167,6 +168,7 @@ html body {
 	background-image: -moz-linear-gradient(top, darkgrey, #737373);
 	background-image: -ms-linear-gradient(top, darkgrey, #737373);
 	background-image: -o-linear-gradient(top, darkgrey, #737373);
+	background-image: url("../assets/btn_phone_bg_bar_on.png"); /* IE 9 */
 }
 
 .number:active {
@@ -264,6 +266,7 @@ html body {
 	background-image: -moz-linear-gradient(top, #83b57a, #53734a);
 	background-image: -ms-linear-gradient(top, #6199b2, #53734a);
 	background-image: -o-linear-gradient(top, #83b57a, #53734a);
+	background-image: url("../assets/btn_phone_bg_bar_green_off.png"); /* IE 9 */
 }
 
 #num_play:hover img {
@@ -277,6 +280,7 @@ html body {
 	background-image: -moz-linear-gradient(top, #83b57a, #53734a);
 	background-image: -ms-linear-gradient(top, #6199b2, #53734a);
 	background-image: -o-linear-gradient(top, #83b57a, #53734a);
+	background-image: url("../assets/btn_phone_bg_bar_green_off.png"); /* IE 9 */
 }
 
 #playBtn {
@@ -307,6 +311,7 @@ html body {
 	background-image: -moz-linear-gradient(top, #6199b2, #36474f);
 	background-image: -ms-linear-gradient(top, #6199b2, #36474f);
 	background-image: -o-linear-gradient(top, #6199b2, #36474f);
+	background-image: url("../assets/btn_phone_bg_bar_blue_off.png"); /* IE 9 */
 	width: 100%;
 }
 
@@ -380,7 +385,8 @@ html body {
 
 body {
 	/*width: 868px;   */
-	width: 99%;
+	width: 778px;
+	/* width: 99%; */
 }
 
 #scratchText {
