RTLScramble_html -Fixed problem with font loading when run standalone. Added Arial as the backup font for body in dli_activity.css -Fixed problem with play button pushed to another line on IPad. -On activity completion it used to lock the app. Now it doesn't -Fixed issue with zooming not working on IPad -Fixed issues with bootstrap styling (removed the bootstrap dependency) with Answers and Set boxes -Added ability to play audio for items completed. -Added set navigation buttons -Added Answered box -Removed "completed" elements from ltr sample data file

--- a/common/css/activityDefault.css
+++ b/common/css/activityDefault.css
@@ -2,7 +2,10 @@
     font-family: "FuturaMedium";
     font-style: normal;
     font-weight: normal;
-    src: url("futura-medium-webfont.eot?#iefix") format("embedded-opentype"), url("futura-medium-webfont.woff") format("woff"), url("futura-medium-webfont.ttf") format("truetype"), url("futura-medium-webfont.svg#FuturaMedium") format("svg");
+    src: url("futura-medium-webfont.eot?#iefix") format("embedded-opentype")
+		, url("futura-medium-webfont.woff") format("woff")
+		, url("futura-medium-webfont.ttf") format("truetype")
+		, url("futura-medium-webfont.svg#FuturaMedium") format("svg");
 }
 
 @font-face {
@@ -18,7 +21,7 @@
 }
 
 body{
-	font-family: FuturaMedium;
+	font-family: FuturaMedium, arial;
 }
 
 body:not([debug="true"]) #firebugIconDiv{
