--- a/RTLScramble_html/styles/RTLScramble.css
+++ b/RTLScramble_html/styles/RTLScramble.css
@@ -6,6 +6,16 @@
 	display: none;
 }
 
+body:not([dir="rtl"]) .firstSpacer,
+body[dir="rtl"] .lastSpacer{
+    margin-right: 15px;
+}
+
+body[dir="rtl"] .firstSpacer,
+body:not([dir="rtl"]) .lastSpacer{
+    width: 5px;
+}
+
 .spacer{
 	width: 15px;
 	/* background-color: blue; */
@@ -67,7 +77,7 @@
 	
     margin-top: 2px;
     /* background-color: red; */
-    width: 85%;
+    width: 100%;
     text-align: center;
 }
 
@@ -172,31 +182,69 @@
     margin-bottom: -16px;
 }
 
-#setTitle {
-    background-image: url("../../common/img/bg_btn_set.png") !important;
+
+#numTitle {
+    /* background-image: url("../../common/img/bg_btn_set.png") !important; */
     border-bottom-left-radius: 4px;
     border-color: rgba(0, 0, 0, 0.15) rgba(0, 0, 0, 0.15) rgba(0, 0, 0, 0.25);
     border-top-left-radius: 4px;
     color: #ffffff;
     float: left;
     font-size: 14px;
-    margin-left: 0;
-    padding-left: 10px;
-    padding-top: 7px;
+    margin: 0px;
     text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
+    /* display: inline-block; */
+    margin-right: 0px;
+    padding: 12px 0px 10px 0px;
+    width: 97px;
+    background-color: rgb(194, 190, 190);
+    text-align: center;
 }
-#setText {
+
+#numText {
     border-radius: 0 4px 4px 0;
-    bottom: auto;
+    /* bottom: auto; */
     font-size: 14px;
-    height: 20px;
+    /* height: 20px; */
     /* margin-left: -7px; */
-    padding-right: 7px;
-    padding-top: 7px;
-    position: relative;
-    top: 0;
-    width: 29px;
+    /* position: relative; */
+    /* top: 0; */
+    width: 26px;
     float: left;
+    margin: 0px;
+    padding: 10px 12px 13px 11px;
+    background-color: rgb(240, 240, 240);
+}
+
+#tsetTitle {
+    /* background-image: url("../../common/img/bg_btn_set.png") !important; */
+    border-bottom-left-radius: 4px;
+    border-color: rgba(0, 0, 0, 0.15) rgba(0, 0, 0, 0.15) rgba(0, 0, 0, 0.25);
+    border-top-left-radius: 4px;
+    color: #ffffff;
+    float: left;
+    font-size: 14px;
+    margin: 0px;
+    text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
+    /* display: inline-block; */
+    margin-right: 0px;
+    padding: 12px 10px 10px 15px;
+    width: 26px;
+    background-color: rgb(194, 190, 190);
+}
+#tsetText {
+    border-radius: 0 4px 4px 0;
+    /* bottom: auto; */
+    font-size: 14px;
+    /* height: 20px; */
+    /* margin-left: -7px; */
+    /* position: relative; */
+    /* top: 0; */
+    width: 26px;
+    float: left;
+    margin: 0px;
+    padding: 10px 12px 13px 11px;
+    background-color: rgb(240, 240, 240);
 }
 
 .btn_set {
@@ -268,23 +316,34 @@
     left: 709px;
     margin: 10px;
     position: absolute;
-    top: 468px;
-    width: 150px;
+    top: 420px;
+    width: 154px;
 }
+#numAnswered {
+    background-color: transparent;
+    cursor: default;
+    float: left;
+    height: 30px;
+    margin-left: -26px;
+    top: 5px;
+    width: 160px;
+    margin-bottom: 20px;
+}
+
 #id_setDiv {
     background-color: transparent;
     cursor: default;
     float: left;
     height: 30px;
-    margin-left: 12px;
+    margin-left: 22px;
     top: 5px;
     width: 120px;
 }
 #id_prev_next_div {
     float: left;
     clear: both;
-    margin-top: 10px;
-    display: none;
+    margin-top: 20px;
+    /* display: none; */
 }
 .btn-group > .btn:first-child {
     border-bottom-left-radius: 4px;
@@ -320,6 +379,10 @@
 	
 }
 
+body{
+	/* font-family:arial; */
+}
+
 body[dir="rtl"] .playBtnLTR  {
     display: none;
 }
@@ -334,12 +397,22 @@ body:not([dir="rtl"]) .playBtnRTL{
     width: 27px;
 }
 
+.playBtnLTR{
+    position: absolute;
+    left: 4px;
+}
+
+.playBtnRTL{
+    position: absolute;
+    right: 4px;
+}
+
 .playBtnLTR,
 .playBtnRTL{
     background-image: url("../../common/Library/images/playBtn_s1.png");
     background-size: cover;
     cursor: pointer;
-    float: left;
+    z-index: 1000;
 }
 
 .playBtnLTR:hover,
