--- a/WarmUp_04_html/styles/WarmUp_04_dliLearn.css
+++ b/WarmUp_04_html/styles/WarmUp_04_dliLearn.css
@@ -112,12 +112,21 @@
     margin-left: 26px;
     margin-top: -2px;
 }
+
+#feedbackTextContainer{
+    /* background-color: blueviolet; */
+
+    height: 68px;
+    overflow: auto;
+}
+
 html body {
     background-color: #F5F5F5;
     color: #444444;
     font-family: Arial,Helvetica,sans-serif;
     letter-spacing: 2px;
     line-height: 20px;
+    overflow: hidden;
 }
 .roundCorners {
     border-radius: 0 0 0 0;
@@ -143,21 +152,21 @@ html body {
     float: left;
     left: 0;
     margin: 3px;
-    max-height: 87px;
-    min-height: 70px;
-    padding: 20px;
+    min-height: 90px;
+    padding: 10px;
     position: relative;
     top: 0;
-    width: 440px;
+    width: 461px;
     z-index: 0;
+    max-height: 90px;
 }
 #feedbackHeader {
     font-size: 20px;
     letter-spacing: 2px;
-    margin-top: -13px;
+    margin: 0px;
 }
 #feedbackText {
-    margin-top: -13px;
+    margin: 8px 0px 0px 0px;
 }
 #feedbackBtn {
     bottom: 10px;
