--- a/Enabling_04_html/styles/Enabling_04_dliLearn_turkish.css
+++ b/Enabling_04_html/styles/Enabling_04_dliLearn_turkish.css
@@ -227,10 +227,11 @@ html body {
     margin: 2px;
     padding-top: 1px;
     text-align: center;
-    width: 37px;
+    width: 35px;
 }
 
 #keyboard{
     position: relative;
-    left: 4px;
+    left: 14px;
+	top: 2px;
 }
