--- a/Enabling_29_html/styles/Enabling_29.css
+++ b/Enabling_29_html/styles/Enabling_29.css
@@ -167,15 +167,32 @@ body[state_feedback="true"] #feedback{
 }
 
 #feedbackBtn {
-    border-radius: 5px;
-    cursor: pointer;
-    background-color: rgb(213, 213, 213);
-    margin-top: 4px;
-    width: 89px;
+    margin-top: 5px;
+    width: 72px;
     height: 26px;
-    margin-left: 81px;
-    padding: 5px 0px 0px 5px;
+    margin-left: 98px;
+    padding: 5px 0px 0px 3px;
     text-align: center;
+}
+
+#feedbackBtn {
+	cursor: pointer;
+    
+	/* bottom: 10px; */
+    
+	/* position: absolute; */
+    
+	/* right: 10px; */
+	background-color: #f5f5f5;   
+    border-radius: 3px;
+	border: 1px solid;
+	/* display: none; */
+	color: #6C6C6C;
+	border-color: rgba(0, 0, 0, 0.15) rgba(0, 0, 0, 0.15) rgba(0, 0, 0, 0.25);
+	/* font-size: 13px; */
+	text-shadow: 0 1px 1px rgba(255, 255, 255, 0.75);
+	background-image: linear-gradient(to bottom, #ffffff, #e6e6e6);
+	box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.05);
 }
 #pageBtns {
     float: right;
@@ -234,9 +251,9 @@ body[state_clickGuard="true"] #stageClickGuard {
 }
 
 #stageClickGuard {
-    background-color: grey;
-    height: 518px;
-    opacity: .6;
+    background-color: rgb(222, 222, 222);
+    height: 415px;
+    opacity: .2;
     width: 628px;
     margin-left: 198px;
     position: absolute;
@@ -279,7 +296,7 @@ body[state_letter_grid_key="true"] #keyboardContainer{
 }
 
 #feedbackTextContainer{
-    height: 461px;
+    height: 459px;
     
     overflow-y: auto;
     /*background-color: thistle;*/
@@ -400,7 +417,7 @@ body[state_letter_grid_key="true"] #letterGridKey{
 #letterGridClickGuard{
     width: 100%;
     height: 100%;
-    background-color:grey;
+    background-color: rgb(251, 250, 250);
     position: absolute;
     top: 0px;
     left: 0px;
